all class names changed

--- a/css/about_us_style.css
+++ b/css/about_us_style.css
@@ -240,7 +240,7 @@ footer a:hover {
 
 /* baner style start */
 
-.header-container {
+.hamid-header-container {
     width: 100%;
     background-color: #fff;
 }
